[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_localbitcoins"
version = "0.1.1"
description = "LocalBitcoins exchange plugin for bt_api framework - P2P Bitcoin marketplace"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "localbitcoins",
    "cryptocurrency",
    "p2p",
    "bitcoin",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_localbitcoins"
Repository = "https://github.com/cloudQuant/bt_api_localbitcoins"
Documentation = "https://bt-api-localbitcoins.readthedocs.io/"
Issues = "https://github.com/cloudQuant/bt_api_localbitcoins/issues"
Changelog = "https://github.com/cloudQuant/bt_api_localbitcoins/blob/master/CHANGELOG.md"

[project.entry-points."bt_api.plugins"]
localbitcoins = "bt_api_localbitcoins.plugin:register_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_localbitcoins"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = ["E501", "E731"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
